--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ musescore-sftools (20180222-1~exp) unstable; urgency=high
 
   * Initial Release
 
- -- Thorsten Glaser <tg@MirBSD.org>  Sat, 28 May 2005 22:02:17 +0000
+ -- Thorsten Glaser <tg@mirbsd.de>  Mon, 05 Mar 2018 01:33:36 +0100
