--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+musescore-sftools (20180222-2) unstable; urgency=medium
+
+  * Collect patches for upstream submission
+  * Rename binary to sf3convert as requested by upstream
+
+ -- Thorsten Glaser <tg@mirbsd.de>  Tue, 13 Mar 2018 18:36:09 +0100
+
 musescore-sftools (20180222-1) unstable; urgency=high
 
   * Initial Release
