--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ musescore-sftools (20180222-2) UNRELEASED; urgency=medium
 
   * Collect patches for upstream submission
   * Rename binary to sf3convert as requested by upstream
+  * Add patch to allow SF3 building in a reproducible manner
 
- -- Thorsten Glaser <tg@mirbsd.de>  Tue, 13 Mar 2018 19:01:54 +0100
+ -- Thorsten Glaser <tg@mirbsd.de>  Tue, 13 Mar 2018 19:42:36 +0100
 
 musescore-sftools (20180222-1) unstable; urgency=high
 
