--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ musescore-sftools (20180222-2) UNRELEASED; urgency=medium
   * Collect patches for upstream submission
   * Rename binary to sf3convert as requested by upstream
   * Add patch to allow SF3 building in a reproducible manner
+  * Provide debian/upstream/metadata as prompted by lintian
 
- -- Thorsten Glaser <tg@mirbsd.de>  Tue, 13 Mar 2018 19:42:36 +0100
+ -- Thorsten Glaser <tg@mirbsd.de>  Tue, 13 Mar 2018 20:17:02 +0100
 
 musescore-sftools (20180222-1) unstable; urgency=high
 
