--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+musescore-sftools (20180222-2) UNRELEASED; urgency=medium
+
+  * Document likely renaming of the binary package upcoming
+
+ -- Thorsten Glaser <tg@mirbsd.de>  Thu, 15 Mar 2018 01:12:33 +0100
+
 musescore-sftools (20180222-1) unstable; urgency=high
 
   * Initial Release
