--- a/debian/musescore-sfconvert.1
+++ b/debian/musescore-sfconvert.1
@@ -59,4 +59,7 @@ XML output needs
 but does not seem to compress.
 .Sh CAVEATS
 Raising the quality to 0.6 might be necessary to avoid artifacts;
-this however increases the size of the generated SF3 by about a third.
+this however increases the size of the generated SF3 by about a third
+(to about fifteen percent of the SF2 size).
+.Pp
+There is no formal specification of the SF3 format yet.
