--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+musescore-sftools (20180325-2) UNRELEASED; urgency=medium
+
+  * Bump debhelper from old 11 to 12.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Tue, 28 Apr 2020 22:01:35 +0000
+
 musescore-sftools (20180325-1) unstable; urgency=high
 
   * Rename binary to sf3convert as requested by upstream
