--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 musescore-sftools (20180325-2) UNRELEASED; urgency=medium
 
   * Bump debhelper from old 11 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 28 Apr 2020 22:01:35 +0000
 
