--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ musescore-sftools (20201011-1) unstable; urgency=medium
   * Bump Policy, add R³:no, remove buster’s -Wl,--as-needed
   * Explicitly B-D on an implementation of pkg-config so libogg and
     libvorbis can be detected (Closes: #1020058)
+  * Update lintian overrides
 
- -- Thorsten Glaser <tg@mirbsd.de>  Sun, 18 Sep 2022 21:09:42 +0200
+ -- Thorsten Glaser <tg@mirbsd.de>  Sun, 18 Sep 2022 21:18:56 +0200
 
 musescore-sftools (20180325-1) unstable; urgency=high
 
