--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+musescore-sftools (20201011-2) UNRELEASED; urgency=medium
+
+  * Remove constraints unnecessary since buster (oldstable):
+    + Build-Depends: Drop versioned constraint on qtbase5-dev (>= 5.6).
+
+ -- Debian Janitor <janitor@jelmer.uk>  Sat, 21 Jan 2023 01:33:12 -0000
+
 musescore-sftools (20201011-1) unstable; urgency=medium
 
   * New upstream release
